<resources>
    <string name="app_name">Weather App</string>

    <string name="search_text">Search For A City</string>
    <string name="today">Today</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="condition">Condition</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="sea">Sea</string>
</resources>